Fixed spacing issue with description

--- a/CSS/product_listing.css
+++ b/CSS/product_listing.css
@@ -174,6 +174,14 @@ main {
     }
 }
 
+@media screen and (max-width: 700px) {
+    .product-info > .filter-option {
+        margin-top: 1em;
+        padding-bottom: 1em;
+    }
+
+}
+
 @media screen and (max-width: 650px) {
     .product-image {
         width: 100%;
